Dev at Toronto Tim Hortons

--- a/public/controller.html
+++ b/public/controller.html
@@ -5,10 +5,21 @@
 
 <head>
   <title>Scoreboard Controller</title>
+  <link rel="stylesheet" type="text/css" href="controller.css">
 </head>
 
 <body>
   <div class="controls">
+    <form onsubmit="setInitials(event)">
+      <label for="home-initials">Home Team:</label>
+      <input type="text" id="home-initials" name="home-initials" maxlength="3" required>
+
+      <label for="away-initials">Away Team:</label>
+      <input type="text" id="away-initials" name="away-initials" maxlength="3" required>
+
+      <button type="submit">Set Initials</button>
+    </form>
+
     <button onclick="updateScore('home', 'increase')">Home +1</button>
     <button onclick="updateScore('home', 'decrease')">Home -1</button>
     <button onclick="updateScore('away', 'increase')">Away +1</button>
@@ -19,40 +30,7 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    var isTimerRunning = false;
-
-    function updateScore(team, action) {
-      socket.emit('update-score', { team, action });
-    }
-
-    function startTimer() {
-      if (!isTimerRunning) {
-        socket.emit('start-timer');
-        isTimerRunning = true;
-      }
-      else {
-        alert('Timer is already running!');
-      }
-    }
-
-    function stopTimer() {
-      if (isTimerRunning) {
-        socket.emit('stop-timer');
-        isTimerRunning = false;
-      }
-      else {
-        alert('Timer is not running!');
-      }
-    }
-
-    function reset() {
-      socket.emit('stop-timer');
-      isTimerRunning = false;
-      socket.emit('reset');
-    }
-  </script>
+  <script src="controller.js"></script>
 </body>
 
 </html>
