--- a/public/scoreboard.html
+++ b/public/scoreboard.html
@@ -12,13 +12,13 @@
 	<div class="scoreboard">
 		<div class="top-row">
 			<div class="box box-a">
-				<p class="initials" id="home">HOME</p>
+				<p class="initials" id="home-initials">HOME</p>
 			</div>
 			<div class="box box-score">
 				<p class="score">0-0</p>
 			</div>
 			<div class="box box-b">
-				<p class="initials" id="away">AWAY</p>
+				<p class="initials" id="away-initials">AWAY</p>
 			</div>
 		</div>
 		<div class="bottom-row">
@@ -28,29 +28,7 @@
 		</div>
 	</div>
 	<script src="/socket.io/socket.io.js"></script>
-	<script>
-		const socket = io();
-
-		socket.on('score', (data) => {
-			const homeScore = data.homeScore;
-			const awayScore = data.awayScore;
-			document.getElementsByClassName('score')[0].textContent = homeScore + '-' + awayScore;
-		});
-
-		socket.on('time', (data) => {
-			const minutes = data.minutes;
-			const seconds = data.seconds;
-			const formattedTime = (minutes < 10 ? '0' + minutes : minutes) + ':' + (seconds < 10 ? '0' + seconds : seconds);
-			document.getElementById('timer').textContent = formattedTime;
-		});
-
-		socket.on('team-initials', (data) => {
-			const homeInitials = data.homeInitials;
-			const awayInitials = data.awayInitials;
-			document.getElementById('home-initials').textContent = homeInitials;
-			document.getElementById('away-initials').textContent = awayInitials;
-		});
-	</script>
+	<script src="scoreboard.js"></script>
 </body>
 
 </html>
