--- a/public/scoreboard.html
+++ b/public/scoreboard.html
@@ -5,7 +5,7 @@
 
 <head>
 	<title>Soccer Scoreboard</title>
-	<link rel="stylesheet" type="text/css" href="scoreboard.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/scoreboard.css">
 </head>
 
 <body>
