--- a/public/controller.html
+++ b/public/controller.html
@@ -5,40 +5,126 @@
 
 <head>
   <title>Scoreboard Controller</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/controller.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="controls">
+  <div id="ctn" class="container text-center" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
     <form onsubmit="setInitials(event)">
-      <label for="home-initials">Home Team:</label>
-      <input type="text" id="home-initials" name="home-initials" maxlength="4" required>
+      <div class="row">
+        <div class="col">
+          <input type="text" class="form-control text-center" placeholder="HOME" aria-placeholder="HOME" id="home-initials" name="home-initials" maxlength="4" required>
+        </div>
 
-      <label for="away-initials">Away Team:</label>
-      <input type="text" id="away-initials" name="away-initials" maxlength="4" required>
+        <div class="col d-grid gap-0">
+          <button class="btn btn-outline-primary" type="submit">Set Initials</button>
+        </div>
 
-      <button type="submit">Set Initials</button>
+        <div class="col">
+          <input type="text" class="form-control text-center" placeholder="AWAY" aria-placeholder="AWAY" id="away-initials" name="away-initials" maxlength="4" required>
+        </div>  
+      </div>
     </form>
 
+    <div class="row">
+      <div class="col">
+        <div class="row">
+          <div class="col">
+            <button class="btn btn-danger" onclick="updateScore('home', 'decrease')">-</button>
+          </div>
+          <div class="col">
+            <p class="fs-1" id="home-score">0</p>
+          </div>
+          <div class="col">
+            <button class="btn btn-success" onclick="updateScore('home', 'increase')">+</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <p class="fs-1" id="time">00:00</p>
+      </div>
+
+      <div class="col">
+        <div class="row">
+          <div class="col">
+            <button class="btn btn-danger" onclick="updateScore('away', 'decrease')">-</button>
+          </div>
+          <div class="col">
+            <p class="fs-1" id="away-score">0</p>
+          </div>
+          <div class="col">
+            <button class="btn btn-success" onclick="updateScore('away', 'increase')">+</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
     <form onsubmit="setTime(event)">
-      <label for="minutes">Minutes:</label>
-      <input type="number" id="minutes" name="minutes" min="0" max="99" required>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="input-group">
+            <input class="form-control" placeholder="Minutes" aria-label="Minutes" type="number" id="minutes" name="minutes" min="0" max="999" required>
 
-      <label for="seconds">Seconds:</label>
-      <input type="number" id="seconds" name="seconds" min="0" max="59" required>
+            <input class="form-control" placeholder="Seconds" aria-label="Seconds" type="number" id="seconds" name="seconds" min="0" max="59" required>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
 
-      <button type="submit">Set Time</button>
+      
+
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="col d-grid gap-0">
+            <button class="btn btn-outline-primary" type="submit">Set Time</button>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
     </form>
 
-    <button onclick="updateScore('home', 'increase')">Home +1</button>
-    <button onclick="updateScore('home', 'decrease')">Home -1</button>
-    <button onclick="updateScore('away', 'increase')">Away +1</button>
-    <button onclick="updateScore('away', 'decrease')">Away -1</button>
-    <button onclick="startTimer()">Start Timer</button>
-    <button onclick="stopTimer()">Stop Timer</button>
-    <button onclick="reset()">Reset</button>
+    <br>
+
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">
+        <div class="col d-grid gap-0">
+          <button class="btn btn-outline-success" onclick="startTimer()">Start Timer</button>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">
+        <div class="col d-grid gap-0">
+          <button class="btn btn-outline-warning" onclick="stopTimer()">Pause Timer</button>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">
+        <div class="col d-grid gap-0">
+          <button class="btn btn-outline-info" onclick="reset()">Reset</button>
+        </div>
+      </div>
+    <div class="col"></div>
+    </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="controller.js"></script>
 </body>
